# src/completion/completionTypes.ts
@@ -1,6 +1,8 @@
-import { CompletionContext } from "../context/contextTypes";
+import { CompletionContext, RepositoryContext } from "../context/contextTypes";
 
-export interface CompletionRequest extends CompletionContext {}
+export interface CompletionRequest extends CompletionContext {
+  repositoryContext?: RepositoryContext;
+}
 
 export interface CompletionResult {
   text: string;
